# macpad-plusplus

./: CMakeLists.txt  Makefile  README.md  build_mac.sh  make_icon.swift
MacPadPlusPlus/: AppDelegate.h  AppDelegate.mm  CMakeLists.txt  EditorView.h  EditorView.mm  FindReplacePanel.h  FindReplacePanel.mm  FindResultsController.h  FindResultsController.mm  MPDocument.h  MPDocument.mm  MainWindowController.h  MainWindowController.mm  PreferencesWindowController.h  PreferencesWindowController.mm  StatusBarController.h  StatusBarController.mm  SyntaxHighlighter.h  SyntaxHighlighter.mm  main.mm
MacPadPlusPlus/Resources/: Info.plist
lexilla/lexers/: LexUserStub.cxx
